# fast-track

./: .gitignore  .pylintrc  CHANGELOG.md  Dockerfile  LICENSE.txt  README.md  app.py  pyproject.toml  run.py
.github/workflows/: python-package.yml
camera_perception/: __init__.py  pipeline.py  utils.py  version.py
camera_perception/object_detection/: __init__.py  object_detector.py  yolov7.py
camera_perception/object_tracking/: __init__.py
config/: coco.yml  rf-detr.yml
fast_track/: __init__.py  pipeline.py  utils.py  version.py
fast_track/analysts/: __init__.py  analyst.py  openai_analyst.py
fast_track/database/: __init__.py  database.py
fast_track/database/schemas/: detection.py  frame.py
fast_track/databases/: __init__.py  sql_database.py  utils.py
fast_track/databases/schemas/: __init__.py  base.py  detection.py  frame.py  job.py  track.py
fast_track/detectors/: __init__.py  object_detector.py  object_detector_onnx.py  util.py
fast_track/object_detection/: __init__.py  object_detector.py  object_detector_onnx.py  util.py  yolov7.py
fast_track/object_tracking/: __init__.py  object_tracker.py  util.py
fast_track/schemas/: detection.py  track.py
fast_track/trackers/: __init__.py  object_tracker.py  util.py
fast_track/trackers/schemas/: __init__.py  detection.py  job.py  track.py
tests/: test_pipeline.py
