[build-system]
requires = ["setuptools>=61", "setuptools_scm[toml]>=7"]
build-backend = "setuptools.build_meta"

[project]
name = "fast_track"
version = "1.2.0"
description = "Object detection and tracking pipeline"
readme = "README.md"
keywords = [
    "computer-vision",
    "object-tracking",
    "object-detection",
    "ai",
]
license = { file = "LICENSE.txt" }
authors = [{ name = "Nate Haddad", email = "nhaddad2112@gmail.com" }]
maintainers = [{ name = "Nate Haddad", email = "nhaddad2112@gmail.com" }]
requires-python = ">=3.10, <3.13"
dependencies = [
    "numpy == 2.1.1", 
    "pyyaml == 6.0.2",
    "opencv-python == 4.11.0.86",
    "onnxruntime == 1.21.0",
    "torch == 2.6.0",
    "scipy == 1.15.2",
    "ultralytics == 8.3.97",
    "pylint == 3.3.6",
    "python-dotenv == 1.1.0",
    "openai == 1.68.2",
    "SQLAlchemy == 2.0.39",
    "rfdetr == 1.0.8",
]
classifiers = [
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
]

[project.optional-dependencies]
gpu = [
    "onnxruntime-gpu==1.21.0",
]
bytetrack = [
    "lapx == 0.5.11.post1",
    "Cython == 3.0.8",
    "cython-bbox @ git+https://github.com/samson-wang/cython_bbox.git#egg=cython-bbox",
]
gradio = [
    "gradio == 3.40.1",
]
yolonas = [
    "numpy == 1.21.6", 
    "onnxruntime == 1.15.0",
    "super-gradients == 3.7.1",
]

[tool.setuptools.packages.find]
exclude = ["config", "media", "models", "src"]
namespaces = false

[tool.ruff]
line-length = 120

